# GlideHeifDecoder

./: README.md  build.gradle  gradle.properties  jitpack.yml  settings.gradle
demo/: build.gradle
demo/src/main/: AndroidManifest.xml
demo/src/main/java/com/msisuzney/glideheifdecoder/demo/: AppGlideModule.java  MainActivity.kt
demo/src/main/res/layout/: activity_main.xml
demo/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
heifdecoder/: build.gradle
heifdecoder/src/main/: AndroidManifest.xml
heifdecoder/src/main/cpp/: CMakeLists.txt  heifdecoder.cpp  heifdecoder.h  rect.h
heifdecoder/src/main/cpp/libheif/: CMakeLists.txt  dav1d.cmake  libde265.cmake
heifdecoder/src/main/java/com/bumptech/glide/integration/heif/: ByteBufferHeifBitmapDecoder.java  HeifBitmapFactory.java  HeifDownsampler.java  HeifImageHeaderParser.java  HeifLibraryGlideModule.java  ImageReader.java  StreamBitmapHeifDecoder.java
